Added label admin plugin boilerplate

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div class="span8">
 					<h2>Heading</h2>
-					<a href="#" id="alerter">Hi</a>
+					<a href="#" class="alerter">Hi</a>
 					<p>
 						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, 
 						tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem 
