--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 				<div class="span8">
 					<h2>Heading</h2>
 					<a href="#" class="alerter">Hi</a>
+					<div id="fholder"></div>
 					<p>
 						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, 
 						tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem 
@@ -70,24 +71,12 @@
 			<footer>
 				<p>&copy; TORCOMM, Inc. 2012</p>
 			</footer>
-			<div class="newlabeltemplate" style="display: none">
+			<div id="leditor" style="display: none">
 				<form method="post" action="#" id="labeleditor">
-					<style>
-						a.cancelbutton,
-						a.submitbutton {
-							background: #0868c1; 
-							color: white; 
-							border-radius: 9px; 
-							-moz-border-radius: 9px; 
-							-webkit-border-radius: 9px; 
-							border: 1px solid #FFFFFF; 
-							padding: 7px; 
-						}
-					</style>
 					<p>
 						<label>Label name:</label>
-						<input type="text" name="newname" id="newname" placeholder="Choose a Name..." />
-						<input type="hidden" name="incolor" id="incolor" value="#fff" />
+						<input type="text" name="lname" id="lname" placeholder="Choose a Name..." />
+						<input type="hidden" name="lcolor" id="lcolor" value="#ffffff" />
 					</p>
 					<p>
 						<label>Choose a Color for your Label:</label>
@@ -102,12 +91,13 @@
 		</div> <!-- /container -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.0.min.js"><\/script>')</script>
+		<script src="js/libs/jquery-ui-1.8.22.custom.min.js"></script>
 		<script src="js/libs/bootstrap/bootstrap.min.js"></script>
 		<script src="js/libs/colorpicker/colorpicker.js"></script>
 		<script src="js/libs/colorpicker/eye.js"></script>
 		<script src="js/libs/colorpicker/layout.js"></script>
 		<script src="js/libs/colorpicker/utils.js"></script>
-		<script src="js/anmlibs/jquery.anm.web.labelMDEditor.js"></script>
+		<script src="js/anmlibs/ui/jquery.ui.anm.labelEditor.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/script.js"></script>
 		<script>
