--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 			<!-- Example row of columns -->
 			<div class="row">
 				<div class="span8">
-					<h2>Heading</h2>
-					<a href="#" class="alerter">Hi</a>
-					<div id="fholder"></div>
+					<h2>Multiple Event Handlers on Events</h2>
+					<div id="hotspot" style="width: 200px; height: 100px; background: yellow;"></div>
 					<p>
 						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, 
 						tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem 
@@ -97,7 +96,7 @@
 		<script src="js/libs/colorpicker/eye.js"></script>
 		<script src="js/libs/colorpicker/layout.js"></script>
 		<script src="js/libs/colorpicker/utils.js"></script>
-		<script src="js/anmlibs/ui/jquery.ui.anm.labelEditor.js"></script>
+		<!-- <script src="js/anmlibs/ui/jquery.ui.anm.labelEditor.js"></script> -->
 		<script src="js/plugins.js"></script>
 		<script src="js/script.js"></script>
 		<script>
