--- a/ctxttest.html
+++ b/ctxttest.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>HTML BoilerPlate</title>
+		<title>Jquery Plugin BoilerPlate Test Page</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width">
@@ -49,23 +49,26 @@
 				<div class="span8">
 					<h2>Plugin Boilerplate Tests</h2>
 					<style>
-						div.bp {
+						div.ctxt {
 							height: 40px;
 							background: yellow;
 							margin-bottom: 10px;
 						}
+						div.ctxtred {
+							background: red !important;
+						}
 					</style>
 					<div class="row">
-						<div class="bp span2"></div>
-						<div class="bp span2"></div>
-						<div class="bp span2"></div>
-						<div class="bp span2"></div>
+						<div id="1" class="ctxt span2"></div>
+						<div id="2" class="ctxt span2"></div>
+						<div id="3" class="ctxt span2"></div>
+						<div id="4" class="ctxt span2"></div>
 					</div>
 					<div class="row">
-						<div class="bp span2"></div>
-						<div class="bp span2"></div>
-						<div class="bp span2"></div>
-						<div class="bp span2"></div>
+						<div id="5" class="ctxt span2"></div>
+						<div id="6" class="ctxt span2"></div>
+						<div id="7" class="ctxt span2"></div>
+						<div id="8" class="ctxt span2"></div>
 					</div>
 					<p>
 						<a class="btn delete" href="#">Delete</a>
@@ -93,7 +96,7 @@
 				<p>&copy; TORCOMM, Inc. 2012</p>
 			</footer>
 		</div> <!-- /container -->
-		<ul id="ctxtMenu" class="contextMenu">
+		<ul id="ctxtMenu">
 			<li class="edit"><a href="#edit">Edit</a></li>
 			<li class="cut separator"><a href="#cut">Cut</a></li>
 			<li class="copy"><a href="#copy">Copy</a></li>
@@ -104,7 +107,7 @@
 		<script src="js/libs/jquery-1.7.2.min.js"></script>
 		<script src="js/libs/bootstrap/bootstrap.min.js"></script>
 		<script src="js/anmlibs/jquery.anm.contextMenu.js"></script>
-		<script src="js/bptest.js"></script>
+		<script src="js/ctxttest.js"></script>
 		<script>
 			var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
 			(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
